--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="image-hotspot">
 
-            <img src="images/lu_map.png" alt="image">
+            <img src="lu_map.png" alt="image">
 
             <div class="item top" style="top: 40%; left: 55%;">
 
